Added p2d_clock and updated cmakelists.

--- a/src/pierogi/CMakeLists.txt
+++ b/src/pierogi/CMakeLists.txt
@@ -2,6 +2,12 @@ project(pierogi)
 
 add_library(pierogi
     p2d_window.cpp
+    p2d_clock.cpp
+    )
+
+set_target_properties(pierogi
+    PROPERTIES 
+    ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib
     )
 
 target_link_libraries(pierogi PUBLIC
