--- a/src/pierogi/CMakeLists.txt
+++ b/src/pierogi/CMakeLists.txt
@@ -1,21 +1,21 @@
-project(pierogi)
+project(p2d-core)
 
-#add_subdirectory(math)
+add_subdirectory(input)
 
-add_library(pierogi
+add_library(p2d-core
     p2d_window.cpp
     p2d_clock.cpp
     )
 
-set_target_properties(pierogi
+set_target_properties(p2d-core
     PROPERTIES 
     ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib
     )
 
-target_link_libraries(pierogi PUBLIC
+target_link_libraries(p2d-core PUBLIC
     ${SDL2_LIBRARIES}
     )
 
-target_include_directories(pierogi PUBLIC
+target_include_directories(p2d-core PUBLIC
     ${SDL2_INCLUDE_DIR}
     )
