--- a/src/pierogi/math/CMakeLists.txt
+++ b/src/pierogi/math/CMakeLists.txt
@@ -1,10 +1,10 @@
-project(math)
+project(p2d-math)
 
-add_library(math
+add_library(p2d-math
     
     )
 
-set_target_properties(math
+set_target_properties(p2d-math
     PROPERTIES 
     ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib
     )
