--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -15,6 +15,7 @@ target_link_libraries(p2d PUBLIC
     p2d-core
     p2d-input
     ${SDL2_LIBRARIES}
+    ${GLEW_LIBRARIES}
     )
 
 target_include_directories(p2d PUBLIC
@@ -22,4 +23,5 @@ target_include_directories(p2d PUBLIC
     ${SRC_DIR}/pierogi/math
     ${SRC_DIR}/pierogi/input
     ${SDL2_INCLUDE_DIR}
+    ${GLEW_INCLUDE_DIR}
     )
