--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,8 @@ cmake_minimum_required(VERSION 3.0)
 
 project(sdl2eng)
 
+find_package(OpenGL REQUIRED)   
+
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_SOURCE_DIR}/cmake)
 set(SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)
 
