Added simple logger class.

--- a/src/pierogi/CMakeLists.txt
+++ b/src/pierogi/CMakeLists.txt
@@ -1,7 +1,8 @@
 project(p2d-core)
 
-add_subdirectory(input)
+add_subdirectory(debug)
 add_subdirectory(math)
+add_subdirectory(input)
 
 add_library(p2d-core
     p2d_window.cpp
