--- a/src/pierogi/input/CMakeLists.txt
+++ b/src/pierogi/input/CMakeLists.txt
@@ -16,8 +16,10 @@ set_target_properties(p2d-input
 
 target_link_libraries(p2d-input PUBLIC
     ${SDL2_LIBRARIES}
+    p2d-debug
     )
 
 target_include_directories(p2d-input PUBLIC
     ${SDL2_INCLUDE_DIR}
+    ${SRC_DIR}/pierogi/debug
     )
