Fix structure of modules. Move rect to utility module.

--- a/src/pierogi/graphics/CMakeLists.txt
+++ b/src/pierogi/graphics/CMakeLists.txt
@@ -19,5 +19,7 @@ target_include_directories(p2d-graphics PUBLIC
     ${SDL2_INCLUDE_DIR}
     ${SRC_DIR}/pierogi/debug
     ${SRC_DIR}/pierogi/math
+    ${SRC_DIR}/pierogi/utility
+    sprite
     )
 
