--- a/src/pierogi/input/CMakeLists.txt
+++ b/src/pierogi/input/CMakeLists.txt
@@ -5,8 +5,8 @@ project(p2d-input)
 add_library(p2d-input
     p2d_event.cpp
     p2d_eventhandler.cpp
-    p2d_mouseeventhandler.cpp
-    p2d_mousestate.cpp
+    mouse/p2d_mouseeventhandler.cpp
+    mouse/p2d_mousestate.cpp
     )
 
 set_target_properties(p2d-input
