Refactoring and adding field class for logging. Adding declaration for templated circular buffer impl.

--- a/src/pierogi/input/CMakeLists.txt
+++ b/src/pierogi/input/CMakeLists.txt
@@ -24,4 +24,5 @@ target_include_directories(p2d-input PUBLIC
     ${SDL2_INCLUDE_DIR}
     ${SRC_DIR}/pierogi/debug
     ${SRC_DIR}/pierogi/math
+    ${SRC_DIR}/pierogi/utility
     )
