--- a/test/ut/CMakeLists.txt
+++ b/test/ut/CMakeLists.txt
@@ -1,9 +1,9 @@
 project(p2d-unittests )
 
 set(UT_SOURCES
-    test_trivial.cpp
     test_p2d_circularbuffer.cpp
     test_p2d_vector.cpp
+    test_p2d_quadtree.cpp
     )
 
 add_executable(p2d-unittests
