Added simple Object class for testing quadtree. Made a simple stringutils header and source. Refactoring.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -14,6 +14,7 @@ set_target_properties(p2d
 target_link_libraries(p2d PUBLIC
     p2d-core
     p2d-input
+    p2d-utility
     ${SDL2_LIBRARIES}
     #${GLEW_LIBRARIES}
     )
@@ -22,6 +23,7 @@ target_include_directories(p2d PUBLIC
     ${SRC_DIR}/pierogi
     ${SRC_DIR}/pierogi/math
     ${SRC_DIR}/pierogi/input
+    ${SRC_DIR}/pierogi/utility
     ${SDL2_INCLUDE_DIR}
     ${GLEW_INCLUDE_DIR}
     )
