--- a/src/pierogi/CMakeLists.txt
+++ b/src/pierogi/CMakeLists.txt
@@ -11,6 +11,7 @@ add_library(p2d-core
     p2d_clock.cpp
     p2d_instance.cpp
     p2d_object.cpp
+    p2d_glwindow.cpp
     )
 
 set_target_properties(p2d-core
