--- a/src/pierogi/input/CMakeLists.txt
+++ b/src/pierogi/input/CMakeLists.txt
@@ -21,7 +21,7 @@ target_link_libraries(p2d-input PUBLIC
     )
 
 target_include_directories(p2d-input PUBLIC
-    ${SDL2_INCLUDE_DIR}
+    ${SDL2_INCLUDE_DIRS}
     ${SRC_DIR}/pierogi/debug
     ${SRC_DIR}/pierogi/math
     ${SRC_DIR}/pierogi/utility
